--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,10 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <include
             android:id="@+id/main_page_toolbar"
@@ -29,13 +32,12 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/main_tabPager"
         android:layout_width="match_parent"
-        android:layout_height="555dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="0dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
-    </android.support.v4.view.ViewPager>
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"></android.support.v4.view.ViewPager>
 </android.support.constraint.ConstraintLayout>
