--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7707ba</color>
+    <color name="colorPrimary">#4BC2DB</color>
     <color name="colorPrimaryDark">#252325</color>
-    <color name="colorAccent">#ff5521</color>
-    <color name="p">#5a008d</color>
+    <color name="colorAccent">#1534CE</color>
+    <color name="p">#1E9EB9</color>
     <color name="b">#eeedf1</color>
 </resources>
